--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
     "sourceMap": true,
+    "allowJs":true,
     "declaration": false,
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
