--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "angularfire2": "^5.0.0-rc.11",
     "core-js": "^2.4.1",
+    "firebase": "^5.2.0",
     "ng2-charts": "^1.6.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
