--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@angular/service-worker": "^6.0.9",
     "angularfire2": "^5.0.0-rc.11",
     "core-js": "^2.4.1",
     "firebase": "^5.2.0",
